Fixed text spacing issue in footer

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -409,6 +409,11 @@ and (max-device-width : 800px) {
 @media only screen
 and (min-device-width : 320px)
 and (max-device-width : 480px) {
+    ul {
+      padding: 0;
+      margin-bottom: 1em;
+      margin-left: 1em;
+    }
 
     .body_area{
       height: 95em;
@@ -479,7 +484,7 @@ and (max-device-width : 480px) {
       font-size: 1em;
       margin: 0;
       margin-bottom: 2em;
-      text-align: center;
+      /*text-align: center;*/
     }
 
   }
